syntax = "proto3";

option csharp_namespace = "Spravy.EventBus.Protos";

package spravy.event_bus;

message PublishEventRequest {
    bytes event_id = 1;
    bytes content = 2;
}

message PublishEventReply {
}

message GetEventsRequest {
    repeated bytes event_ids = 1;
}

message GetEventsReply {
    repeated Event events = 1;
}

message SubscribeEventsRequest {
    repeated bytes event_ids = 1;
}

message SubscribeEventsReply {
    bytes event_id = 1;
    bytes content = 2;
}

message ChangeToDoItemIsFavoriteEvent {
    bytes to_do_item_id = 1;
    bool is_favorite = 2;
}

message AddRootToDoItemEvent {
    bytes to_do_item_id = 1;
}

message Event {
    bytes event_id = 1;
    bytes content = 2;
}